src/test/deca/context/invalid/langage_sans_objet/troisieme_passe/regle_3_29.deca
{
    if (1) {
    }
}

// raison : type != boolean
// message : Condition is of type 'int', it must be a boolean